--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC1'
@@ -45,4 +45,23 @@ dependencies {
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+}
+
+
+buildscript {
+    repositories {
+//        jcenter() // or jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.2.3'   //last version Jan 2016
+    }
+}
+
+allprojects {
+    repositories {
+        //jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    }
 }
