--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
-        android:name="com.feasttime.menu.com.feasttime.view.MenuApplication"
+        android:name="com.feasttime.MenuApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.feasttime.menu.com.feasttime.view.MainActivity">
+        <activity android:name="com.feasttime.view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
