--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.56.android'
 
     // retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile'com.squareup.retrofit2:retrofit:2.2.0'
+    compile'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
