--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.alibaba:fastjson:1.1.56.android'
-
     // retrofit
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
@@ -49,9 +48,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.r0adkll:slidableactivity:2.0.5'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android:support-v4:r7'
-
-
+    //    compile 'com.google.android:support-v4:r7'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:support-v4:25.3.0'
 }
 
 
