修改播放视频

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <activity android:name="com.feasttime.view.ShowWebActivity"></activity>
 
-        <activity android:name="com.feasttime.view.PlayVideoActivity"></activity>
+        <activity android:name="com.feasttime.view.PlayVideoActivity" android:theme="@style/DialogTransparent" ></activity>
     </application>
 
 </manifest>
