--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -28,8 +28,6 @@
         </activity>
         <activity android:name="com.feasttime.view.MainActivity">
         </activity>
-        <activity android:name="com.feasttime.view.RecommendActivity">
-        </activity>
 
         <activity android:name="com.feasttime.view.EndActivity">
         </activity>
@@ -37,6 +35,8 @@
         <activity android:name="com.feasttime.view.ShowWebActivity"></activity>
 
         <activity android:name="com.feasttime.view.PlayVideoActivity" android:theme="@style/DialogTransparent" ></activity>
+        <activity android:name="com.feasttime.view.LoginActivity"></activity>
+
     </application>
 
 </manifest>
